--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "config": "^3.3.8",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "joi": "^17.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
     "multer": "^1.4.4",
