--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "joi": "^17.6.3",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.6.5",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
