--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
     "mongoose": "^6.6.5",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "prop-types": "^15.8.1"
   },
   "devDependencies": {
     "concurrently": "^7.4.0",
