--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
     "react-icons": "^4.6.0",
+    "react-image-crop": "^9.1.1",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.2",
