--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "config": "^3.3.8",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
     "joi": "^17.6.3",
     "jsonwebtoken": "^8.5.1",
