--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
+    "globby": "^13.1.2",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.1.8"
   }
