--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,2 @@
-REACT_APP_API_ENDPOINT="http://45.87.2.116/api"
+REACT_APP_API_ENDPOINT="http://alotrade.uz/api"
+REACT_APP_API_SOCKET_ENDPOINT="http://alotrade.uz/"
