--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "joi": "^17.6.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
@@ -28,7 +29,8 @@
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
     "path": "^0.12.7",
-    "prop-types": "^15.8.1"
+    "prop-types": "^15.8.1",
+    "socket.io": "^4.5.3"
   },
   "devDependencies": {
     "concurrently": "^7.4.0",
