--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-image-crop": "^9.1.1",
     "react-images-uploading": "^3.1.7",
     "react-modal": "^3.16.1",
+    "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
