--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "i18next": "^21.10.0",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.0.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
