--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,24 +9,29 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "i18next": "^21.10.0",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.0.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-auto-image-slider": "^1.0.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
     "react-icons": "^4.6.0",
     "react-image-crop": "^9.1.1",
     "react-images-uploading": "^3.1.7",
     "react-modal": "^3.16.1",
+    "react-multi-carousel": "^2.8.2",
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.5.2",
+    "react-simple-image-slider": "^2.4.1",
     "react-snap": "^1.23.0",
+    "react-text-truncate": "^0.19.0",
     "react-toastify": "^9.0.8",
     "socket.io-client": "^4.5.3",
     "web-vitals": "^2.1.4"
