--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_API_ENDPOINT="http://alotrade.uz/api"
-REACT_APP_API_SOCKET_ENDPOINT="http://alotrade.uz/"
+REACT_APP_API_ENDPOINT="http://185.107.237.60/api"
+REACT_APP_API_SOCKET_ENDPOINT="http://185.107.237.60/"
